refactor: 정적 팩토리 메서드를 사용하여 코드 길이 개선